@@ -1,4 +1,5 @@
 Sigil v0.1.4 <ADD DATE>
+    - provided more informative tooltips by following Word 2007 tooltip style (issue #64) 
     - the heading text can now be edited in the TOC Editor (issue #131)
     - the Save As dialog now uses the current filename in the filename field (issue #18)
     - views can now be zoomed (issue #44)
